# bytepack

./: .gitignore  LICENSE  README.md  benchmark.py  pyproject.toml  smithery.yaml
bytepack/: __init__.py  client.py
bytepack/integrations/: __init__.py  agency_swarm.py  autogen.py  crewai.py  google_adk.py  langgraph.py  openai_agents.py
tests/: test_encode.py
